--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Kerge - Resume / CV / vCard Template" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta name="author" content="lmpixels" />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/icon.png">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
@@ -35,11 +35,11 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content clearfix">
           <div class="my-photo">
-            <img src="images/Headshot.jpg" alt="image">
+            <img src="images/photo.jpg" alt="image">
           </div>
 
           <div class="site-title-block">
-            <div class="site-title">Emmy Park/div>
+            <div class="site-title">Emmy Park </div>
           </div>
 
           <!-- Navigation -->
@@ -129,7 +129,7 @@
                           <h2 class="hp-main-title">Emmy Park</h2>
                           <p>I'm a city lover, former civil engineer, and future planner currently pursuing a master's in city planning with a focus on transportation and infrastructure. Dedicated to shaping safer and more inclusive cities, I bring perspectives from my time living in Chicago, Los Angeles, and now Philadelphia. Outside of planning, I enjoy exploring cities on foot or bike, rock climbing, and losing myself in a good book.</p>
                           <div class="hp-buttons">
-                            <a href="http://github.com/emmyhp/Portfolio/raw/master/main/EPark_Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+                            <a href="https://github.com/emmyhp/Portfolio/raw/main/EPark_Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
                           </div>
                         </div>
                       </div>
