--- a/index.html
+++ b/index.html
@@ -120,16 +120,11 @@
                     <div class="col-sm-12 col-md-6 col-lg-6">
                       <div class="inner-content">
                         <div class="hp-text-block">
-                          <!-- Subtitle -->                                  
-                            <div class="item">
-                              <div class="sp-subtitle">Transportation and Infrastructure Planner</div>
-                            </div>
-                          <!-- Subtitle -->
 
                           <h2 class="hp-main-title">Emmy Park</h2>
                           <p>I'm a city lover, former civil engineer, and future planner currently pursuing a master's in city planning with a focus on transportation and infrastructure. Dedicated to shaping safer and more inclusive cities, I bring perspectives from my time living in Chicago, Los Angeles, and now Philadelphia. Outside of planning, I enjoy exploring cities on foot or bike, rock climbing, and losing myself in a good book.</p>
                           <div class="hp-buttons">
-                            <a href="https://github.com/emmyhp/Portfolio/raw/main/EPark_Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+                            <a href="https://github.com/emmyhp/Portfolio/raw/main/files/EPark_Resume.pdf" target="_blank" class="btn btn-primary">Download Resume</a>
                           </div>
                         </div>
                       </div>
