--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="inner-content">
-                          <div class="fill-block"></div>
+                          <img src="images/Headshot.jpg" alt="image">
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
@@ -206,59 +206,6 @@
                   </div>
                   <!-- /Services Block -->
 
-                  <!-- Clients Block -->
-                  <div class="row">
-                    <div class="col-xs-12 col-sm-12">
-                      <div class="col-inner">
-                        <!-- Clients Block Title -->
-                        <div class="block-title">
-                          <h3>Clients<span></span></h3>
-                        </div>
-                        <!-- /Clients Block Title -->
-
-                        <!-- Clients Carousel Block -->
-                        <div class="clients owl-carousel">
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-7.png" alt="Logo">
-                            </a>
-                          </div>
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-6.png" alt="Logo">
-                            </a>
-                          </div>
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-5.png" alt="Logo">
-                            </a>
-                          </div>
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-4.png" alt="Logo">
-                            </a>
-                          </div>
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-3.png" alt="Logo">
-                            </a>
-                          </div>
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-2.png" alt="Logo">
-                            </a>
-                          </div>
-                          <div class="client-block">
-                            <a href="#" target="_blank" title="Logo">
-                              <img src="images/clients/client-1.png" alt="Logo">
-                            </a>
-                          </div>  
-                        </div>
-                        <!-- /Clients Carousel Block -->
-                      </div>
-                    </div>
-                  </div>
-                  <!-- /Clients Block -->
                 </div>
               </div>
             </section>
