--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="inner-content">
-                          <img src="images/Headshot(3).jpg" alt="image">
+                          <img src="images/Headshot(3).jpg" alt="image" style="width: 150px; height: auto;">
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
