--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                       <div class="inner-content">
                         <div class="hp-text-block">
                           <h2 class="hp-main-title">Emmy Park</h2>
-                          <p>I'm a city lover, former civil engineer, and future planner currently pursuing a master's in city planning with a focus on transportation and infrastructure. Dedicated to shaping safer and more inclusive cities, I bring perspectives from my time living in Chicago, Los Angeles, and now Philadelphia. Outside of planning, I enjoy exploring cities on foot or bike, rock climbing, and losing myself in a good book.</p>
+                          <p>I'm a city lover, former civil engineer, and future planner currently pursuing a master's in city planning with a focus on transportation and infrastructure. Dedicated to shaping safer and more inclusive cities, I bring perspectives from my time living in Chicago, Los Angeles, and now Philadelphia.</p>
                           <div class="hp-buttons">
                             <a href="https://github.com/emmyhp/Portfolio/raw/main/files/EPark_Resume.pdf" target="_blank" class="btn btn-primary">Download Resume</a>
                           </div>
